# lrd-reason

./: .gitignore  LAUNCH.md  README.md  pyproject.toml  requirements.txt
configs/: finetune_uncensored.yaml  main.yaml  smoke.yaml
configs/ablations/: baseline.yaml  diffusion_only.yaml  full.yaml  recurrent_only.yaml
scripts/: demo.py  download_models.py  encode_targets.py  fetch_philosophy.py  finetune_uncensored.py  generate_data.py  launch.sh  prepare_uncensored_data.py  run_eval.py  train_stage1.py  train_stage2.py  tui.py
src/lrd_reason/: __init__.py  config.py  constitution.py
src/lrd_reason/data/: __init__.py  collate.py  cot_generator.py  dataset.py  text_dataset.py
src/lrd_reason/eval/: __init__.py  ablations.py  gsm8k.py  math_bench.py  metrics.py  multi_turn.py
src/lrd_reason/eval/verifiers/: __init__.py
src/lrd_reason/infer/: __init__.py  cli.py  pipeline.py  state_store.py
src/lrd_reason/models/: __init__.py  adapter.py  diffusion.py  encoder.py  llm.py  pipeline.py  recurrent_state.py
src/lrd_reason/train/: __init__.py  loop.py  stage1.py  stage2.py  stage_pretrain.py  stage_rlvr.py
tests/: conftest.py  test_adapter.py  test_config.py  test_constitution.py  test_data.py  test_diffusion.py  test_encoder.py  test_eval.py  test_finetune_uncensored.py  test_inference_runner.py  test_pipeline.py  test_recurrent.py  test_state_store.py  test_train_stage1.py
tests/fixtures/: cot.smoke.jsonl
